# ozz-assimp-loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b  buildapp  loader.cpp  loader.hpp  main.cpp  mesh_import.cpp  mesh_import.hpp  model3d_schema.capnp  model3d_schema.capnp.c++  model3d_schema.capnp.h  model3d_schema.proto3  model3d_schema_capnp.rs  output.txt  schema.capnp  schema.capnp.c++  schema.capnp.h  test_mesh_output  test_mesh_output.cpp
